--- a/teste/customElements.html
+++ b/teste/customElements.html
@@ -3,6 +3,7 @@
 <title>custom Elements</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
+<script language=JavaScript src=/js/func.js></script>
 <script language=JavaScript src=/js/funcoes.js></script>
 <script language=JavaScript src=/js/funcoes1.js></script>
 
